--- a/i18n/locales/source/blockly-mooc/common.json
+++ b/i18n/locales/source/blockly-mooc/common.json
@@ -136,6 +136,10 @@
   "aiWarningModalMessagesAreRecorded": "All messages you send are recorded.",
   "aiWarningModalPersonalNotSubmitted": "In order to protect your privacy, anything considered personal information (name, phone number, address, etc.) should not be submitted.",
   "aiWarningModalOk": "Start chatting",
+  "aiChatBotIconAlt": "An icon depicting a robot",
+  "aiChatInappropriateUserMessage": "This message has been flagged as inappropriate.",
+  "aiChatTooPersonalUserMessage": "This message has been flagged as too personal.",
+  "aiChatResponseError": "There was an error getting a response. Please try again.",
   "all": "All",
   "allHandouts": "All Handouts",
   "allowEditing": "Allow editing",
@@ -1135,6 +1139,9 @@
   "enterYourAnswerHere": "Enter your answer here",
   "enterYourName": "Enter Your Name",
   "enterYourSchoolZip": "Enter your school's zip code:",
+  "enrollmentCelebrationTitle": "You've been enrolled!",
+  "enrollmentCelebrationBody": "You've successfully been enrolled for {workshopName}. You can see the workshop and additional information in your professional learning center.",
+  "enrollmentCelebrationCallToAction": "Go to my professional learning",
   "enrollmentDescription": "Join your teacher's classroom by entering their section code below. Teachers will be able to see your course progress, projects, and reset your password in case you forget it.",
   "equalTo": "Equal to",
   "errorDeleting": "Error deleting file.",
