--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -1343,6 +1343,7 @@
   "hidePicture": "Hide picture",
   "hidePreview": "Hide preview",
   "hideProjectSharingColumn": "Hide project sharing column",
+  "hideResponse": "Hide response",
   "hideSection": "Hide Section",
   "hideWords": "Hide words",
   "hideToolbarHelper": "Press **_A_A** and choose **Hide Toolbar** to see the full screen.",
@@ -2042,6 +2043,7 @@
   "plugged": "Plugged",
   "pluggedLessonsNote": "*Online or ‘plugged’ lessons are automatically marked as complete on your behalf once 80% of your class has completed 60% of the available lesson.",
   "picturePassword": "Picture password",
+  "pinResponse": "Pin response",
   "policyCompliance_parentalPermissionBanner_title": "Heads up!",
   "policyCompliance_parentalPermissionBanner_desc": "You will need your parent or guardian’s permission by {lockoutDate} to keep using your Code.org account.",
   "policyCompliance_parentalPermissionBanner_button": "Get permission",
