--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -2598,6 +2598,7 @@
   "sharingDisabled": "Sorry, this project is not available for sharing. If this is your project or the project of one of your students, please [sign in]({sign_in_url}) to your account to view the project.",
   "show": "Show",
   "showAllLessons": "Show All Lessons",
+  "showAllResponses": "Show all responses",
   "showAnswer": "Show answer",
   "showAnswers": "Show answers",
   "showAnswersInstructions": "\"Show answers\" to put the assessment into a read-only mode.",
