--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -2599,7 +2599,6 @@
   "sharingDisabled": "Sorry, this project is not available for sharing. If this is your project or the project of one of your students, please [sign in]({sign_in_url}) to your account to view the project.",
   "show": "Show",
   "showAllLessons": "Show All Lessons",
-  "showAllResponses": "Show all responses",
   "showAnswer": "Show answer",
   "showAnswers": "Show answers",
   "showAnswersInstructions": "\"Show answers\" to put the assessment into a read-only mode.",
@@ -2607,6 +2606,7 @@
   "showBlocksHeader": "Show Blocks",
   "showCodeHeader": "Show Code",
   "showDetails": "Show Details",
+  "showHiddenResponses": "Show hidden responses",
   "showGeneratedCode": "Show code",
   "showGrid": "Show grid",
   "showOlderComments": "Show older comments",
