--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -2880,6 +2880,7 @@
   "unhideAndAssignHeader": "This unit is currently hidden from the section",
   "unhideUnitAndAssign": "Unhide unit and assign",
   "unnamedFunction": "You have a variable or function that does not have a name. Don't forget to give everything a descriptive name.",
+  "unpinResponse": "Unpin response",
   "unplugged": "Unplugged",
   "unpluggedActivity": "Unplugged Activity",
   "unpluggedLesson": "Unplugged Lesson",
