--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -12,6 +12,10 @@
   "abuseTypeOther": "Other",
   "abuseTypeQuestion": "How does this content violate the [Terms of Service]({url})?",
   "abusiveUrl": "URL of the content being reported",
+  "accountWelcomeBannerHeaderLabel": "Continue with a Code.org account",
+  "accountWelcomeBannerContentWorkshopEnroll": "To enroll in workshops, you’ll need a Code.org educator account.",
+  "accountExistingAccountCardContentWorkshopEnroll": "You’ll need to sign in to your Code.org account to enroll in this workshop",
+  "accountNewAccountCardContentWorkshopEnroll": "You’ll need to create an account on Code.org to enroll in this workshop",
   "achievements": "Achievements",
   "activity": "Activity",
   "activityGuides": "Activity Guides",
