added new countries and partners

--- a/dashboard/config/locales/en.yml
+++ b/dashboard/config/locales/en.yml
@@ -1230,14 +1230,19 @@ en:
         not_listed: 'Preferred term not listed'
         none: 'Prefer not to answer'
       school_country:
+        antigua_and_barbuda: 'Antigua and Barbuda'
         australia: 'Australia'
         barbados: 'Barbados'
         belize: 'Belize'
+        botswana: 'Botswana'
         brazil: 'Brazil'
+        cambodia: 'Cambodia'
         canada: 'Canada'
         chile: 'Chile'
         colombia: 'Colombia'
         dominican_republic: 'Dominican Republic'
+        ecuador: 'Ecuador'
+        egypt: 'Egypt'
         india: 'India'
         indonesia: 'Indonesia'
         israel: 'Israel'
@@ -1247,18 +1252,24 @@ en:
         kosovo: 'Kosovo'
         malaysia: 'Malaysia'
         maldives: 'Maldives'
+        malta: 'Malta'
         mexico: 'Mexico'
         mongolia: 'Mongolia'
         new_zealand: 'New Zealand'
         paraguay: 'Paraguay'
+        peru: 'Peru'
         philippines: 'Philippines'
         portugal: 'Portugal'
         puerto_rico: 'Puerto Rico'
+        romania: 'Romania'
         slovakia: 'Slovakia'
+        south_africa: 'South Africa'
         south_korea: 'South Korea'
         spain: 'Spain'
+        sri_lanka: 'Sri Lanka'
         thailand: 'Thailand'
         trinidad_and_tobago: 'Trinidad and Tobago'
+        uruguay: 'Uruguay'
         uzbekistan: 'Uzbekistan'
         vietnam: 'Vietnam'
       ages:
