--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -2613,6 +2613,7 @@
   "showPicture": "Show picture",
   "showPreview": "Show preview",
   "showSection": "Show Section",
+  "showStudentNames": "Show student names",
   "showTextHeader": "Show Text",
   "showToolbox": "Show Toolbox",
   "showVersionsHeader": "Version History",
