levelbuilder content changes (-robo-commit)

--- a/dashboard/config/locales/scripts.en.yml
+++ b/dashboard/config/locales/scripts.en.yml
@@ -10447,6 +10447,8 @@ en:
               name: New Game Design Lesson 3
             lesson-13:
               name: Music Lab Testing
+            lesson-14:
+              name: Chatbots
           lesson_groups: {}
           name: katies-playground
           title: Katie's Place To Do Stuff
