--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -120,6 +120,7 @@
   "aiEvaluationStatus_pii_error": "AI analysis cannot be completed due to the presence of potential personal information in the student's code.",
   "aiEvaluationStatus_profanity_error": "AI analysis cannot be completed due to profanity in the student's code.",
   "aiEvaluationStatus_request_too_large": "The AI analysis failed due to lengthy student code. Our team is addressing the issue. Please manually grade this student's project in the meantime.",
+  "aiEvaluationStatus_teacher_limit_exceeded": "This work was not evaluated because you have already reached the limit of {limit} AI evaluations for this student on this level.",
   "aiEvaluationStatusAll_not_attempted": "No students have attempted this level. No AI analysis available.",
   "aiEvaluationStatusAll_already_evaluated": "AI analysis already completed for all available student projects.",
   "aiEvaluationStatusAll_ready": "AI analysis can be generated for {unevaluatedCount} student projects.",
